Fixing CSS, which was broken on LazyPage

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,7 +1,7 @@
 :local(.styles) {
   position: fixed;
   z-index: 1;
-
+  top: 0;
   width: 100%;
 
   padding: 20px 0;
